# LAB_Codes

./: README.md
C/: CMakeLists.txt
C/혼자 공부하는 C언어/Beginner/Chapter 1 프로그램 만들기/: main_1.c
C/혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/: 1. 10과 20을 더하는 프로그램.c  2. 문자열을 화면에 출력하는 프로그램.c  3. 제어 문자를 사용한 출력.c  4. 정수와 실수의 출력.c  5. 세 가지 진법의 정수 상수.c  6. 지수 형태의 실수 상수.c  7. 문자와 문자열 데이터의 출력.c
C/혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Problem/: Problem_2-1-2.c  Problem_2-1-3.c  Problem_2-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/: 1. 변수의 선언과 사용.c  10. scanf 함수를 사용한 연속 입력.c  11. 문자와 문자열 입력.c  2. char형 변수의 사용.c  3. 여러 가지 정수형 변수.c  4. unsigned를 잘못 사용한 경우.c  5. 유효 숫자 확인.c  6. char 배열에 문자열 저장.c  7. char 배열에 문자열 복사.c  8. const를 사용한 변수.c  9. scanf 함수를 사용한 키보드 입력.c
C/혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Problem/: Problem_3-1-2.c  Problem_3-1-3.c  Problem_3-2-2.c  Problem_3-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/: 1. 대입, 덧셈, 뺄셈, 곱셈, 음수 연산.c  10. 복합대입 연산자.c  11. 콤마 연산자.c  12. 조건 연산자.c  13. 비트 연산식의 결과.c  14. 연산자 우선순위와 연산 방향.c  2. 몫과 나머지를 구하는 연산.c  3. 증감 연산자의 연산.c  4. 전위 표기와 후위 표기를 사용한 증감 연산.c  5. 관계 연산의 결괏값 확인.c  6. 논리 연산의 결괏값 확인.c  7. 연산의 결괏값을 사용하는 방법.c  8. 형 변환 연산자가 필요한 경우.c  9. sizeof 연산자의 사용 예.c
C/혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/: Challenge_4_체중관리 프로그램.c  Problem_4-1-1.c  Problem_4-1-2.c  Problem_4-1-3.c  Problem_4-2-1.c  Problem_4-2-2.c  Problem_4-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/: 1. if문의 기본 형식.c  2. if ~ else문의 사용.c  3. if ~ else if ~ else문 사용.c  4. 중첩된 if문.c  5. 중첩 if문에서 중괄호가 반드시 필요한 경우.c  6. switch ~ case문의 사용.c
C/혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/: Challenge_5_계산기 프로그램.c  Problem_5-1-1-1.c  Problem_5-1-1-2.c  Problem_5-1-2.c  Problem_5-1-3.c  Problem_5-2-2.c  Problem_5-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Example/: 1. while문을 사용한 반복문.c  2. for문을 사용한 반복문.c  3. do ~ while문을 사용한 반복문.c  4. 중첩 반복문을 사용한 별 출력.c  5. break를 사용한 반복문 종료.c
C/혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/: Challenge_6_소수(prime number) 출력 프로그램.c  Problem_6-1-1.c  Problem_6-1-2.c  Problem_6-1-3.c  Problem_6-2-1.c  Problem_6-2-2.c  Problem_6-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/: 1. 2개의 함수로 만든 프로그램.c  2. 매개변수가 없는 함수.c  3. 반환값이 없는 함수.c  4. 반환값과 매개변수가 모두 없는 함수.c  5. 재귀호출 함수.c  6. 3번 실행되는 재귀호출 함수.c  7. 3번 실행되는 재귀호출 함수 2.c
C/혼자 공부하는 C언어/Beginner/Chapter 7 함수/Problem/: Challenge_7_1부터 10까지의 합 계산(재귀호출 사용).c  Problem_7-1-1.c  Problem_7-1-3.c  Problem_7-2-2.c  Problem_7-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/: 1. 5명의 나이를 저장할 배열을 선언하고 사용하는 방법.c  2. 배열과 반복문을 사용한 성적 처리 프로그램.c  3. sizeof 연산자를 사용한 배열.c  4. 문자열을 저장하는 char형 배열.c  5. 문자열을 대입하는 strcpy 함수.c  6. 빈칸을 포함한 문자열 입력.c
C/혼자 공부하는 C언어/Beginner/Chapter 8 배열/Problem/: Challenge_8_대소문자 변환 프로그램.c  Problem_8-1-3.c  Problem_8-2-3.c
C/혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/: 1. 변수의 메모리 주소 확인.c  2. 포인터의 선언과 사용.c  3. 포인터를 사용한 두 정수의 합과 평균 계산.c  4. 포인터에 const 사용.c  5. 주소와 포인터의 크기.c  6. 허용되지 않는 포인터의 대입.c  7. 포인터를 사용한 두 변수의 값 교환.c  8. 다른 함수의 변수 사용하기.c  9. 변수의 값을 인수로 주는 경우.c
C/혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Problem/: Challenge_9_미니 정렬 프로그램.c  Problem_9-1-3.c  Problem_9-2-3.c
CPP/Practice/: Class_Animal  Class_Animal.cpp  Class_Date  Class_Date.cpp  Data type.cpp  Destructor  Destructor.cpp  Formatted Table.cpp  Functions.py  Integer Modifiers.cpp  Integer types.cpp  Line changing_1.cpp  Loop  Loop.cpp  New_and_Delete  New_and_Delete.cpp  Printing data.cpp  Reading data in_2.cpp  Reference  Reference.cpp  String_Class.cpp  The role of iosteram_1.cpp  The role of iostream_2.cpp
CPP/Practice_20220501/: Chaining std::cin.cpp  Chaining std_cin.cpp  Comments.cpp  Comments_1.cpp  Data type.cpp  ErrorsAndWarnings.cpp  Functions.cpp  Functions.py  Integer Modifiers.cpp  Integer types.cpp  Line changing_1.cpp  Line changing_2.cpp  Printing data.cpp  Reading data in_1.cpp  Reading data in_2.cpp  Statements.cpp  rooster
CPP/Practice_20220502/: Formatted Table  Formatted Table.cpp  sample  sample.cpp
Computer Vision/C#과 파이썬을 활용한 OpenCV 4 프로그래밍/: OpenCV_Codes.ipynb
DL-AI Advanced Track/Introduction to Deep Learning/01. Perceptron/: 04. NAND gate와 NOR gate 구현하기.py  visual.py
Machine Learning/2022-1 빅데이터와인공지능/: HW_4_Clustering.ipynb  HW_5_DeepLearning.ipynb
Machine Learning/2022-1 빅데이터와인공지능/datasets/: Export.csv
Machine Learning/DL-AI 심화 Track/02. TensorFlow 튜토리얼/: 이수증(TensorFlow 튜토리얼).pdf:Zone.Identifier
Machine Learning/파이썬 머신러닝 가이드/Classification/: Classification_Example_1.ipynb  Classification_Example_2.ipynb  Practice_Classification_1.ipynb  Practice_Classification_2.ipynb  Practice_Classification_3.ipynb  Practice_LightGBM_1.ipynb  Stacking_Ensemble_Example_1.ipynb
Machine Learning/파이썬 머신러닝 가이드/Evaluation/: Practice_Evaluation_1.ipynb  Practice_Evaluation_2.ipynb
Machine Learning/파이썬 머신러닝 가이드/Regression/: Practice_Regresssion_1.ipynb
Machine Learning/파이썬 머신러닝 가이드/numpy/: Practice_numpy.ipynb  numpy_1.py  numpy_2.py  numpy_3.py  numpy_4.py  numpy_5.py  numpy_6.py  numpy_7.py
Machine Learning/파이썬 머신러닝 가이드/pandas/: Practice_pandas.ipynb  pandas_1.py  pandas_2.py  pandas_3.py  pandas_4.py  pandas_5.py  pandas_6.py  pandas_7.py
Machine Learning/파이썬 머신러닝 가이드/scikit-learn/: Practice_scikit-learn.ipynb  Titanic_Prediction.ipynb  scikit-learn_1.py  scikit-learn_2.py  scikit-learn_3.py  scikit-learn_4.py  scikit-learn_5.py  scikit-learn_6.py  scikit-learn_7.py  scikit-learn_8.py  scikit-learn_9.py
Machine Learning/혼자 공부하는 머신러닝+딥러닝/Deep Learning/: Fashion_MNIST_1.ipynb  Fashion_MNIST_2.ipynb  best-model.h5  (+8 more)
Matlab/2021-2 Engineering Mathematics Ⅱ/: AdvancedEngineeringMathematics_Figure_12_1.m  AdvancedEngineeringMathematics_Figure_12_3.m
Matlab/2022-1 Automatic Control/: Homework_1_1.m  Homework_4_3.m  Homework_4_4.m
Matlab/2022-1 Mechanical Vibration/: Problem_1_118.m  Problem_2_187.m  dfunc1.m  forier.m
Practice_20220430/: rooster
Practice_20220501/: sample_4.cpp
Practice_CPP/Practice_20220430/: main
Practice_CPP/Practice_20220501/: rooster
Python/: Practice_WebCrolling.ipynb  Python_Codes.ipynb
Python/2022-1 빅데이터와인공지능/: pascucci.csv
(+146 files in other folders)
