cmake_minimum_required(VERSION 3.19)
project(Practice_C C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(main_1 "혼자 공부하는 C언어/Beginner/Chapter 1 프로그램 만들기/main_1.c")
add_executable(Example_2-1 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/1. 10과 20을 더하는 프로그램.c")
add_executable(Example_2-2 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/2. 문자열을 화면에 출력하는 프로그램.c")
add_executable(Example_2-3 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/3. 제어 문자를 사용한 출력.c")
add_executable(Example_2-4 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/4. 정수와 실수의 출력.c")
add_executable(Problem_2-1-2 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Problem/Problem_2-1-2.c")
add_executable(Problem_2-1-3 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Problem/Problem_2-1-3.c")
add_executable(Example_2-5 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/5. 세 가지 진법의 정수 상수.c")
add_executable(Example_2-6 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/6. 지수 형태의 실수 상수.c")
add_executable(Example_2-7 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Example/7. 문자와 문자열 데이터의 출력.c")
add_executable(Problem_2-2-3 "혼자 공부하는 C언어/Beginner/Chapter 2 상수와 데이터 출력/Problem/Problem_2-2-3.c")
add_executable(Example_3-1 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/1. 변수의 선언과 사용.c")
add_executable(Example_3-2 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/2. char형 변수의 사용.c")
add_executable(Example_3-3 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/3. 여러 가지 정수형 변수.c")
add_executable(Example_3-4 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/4. unsigned를 잘못 사용한 경우.c")
add_executable(Example_3-5 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/5. 유효 숫자 확인.c")
add_executable(Example_3-6 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/6. char 배열에 문자열 저장.c")
add_executable(Example_3-7 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/7. char 배열에 문자열 복사.c")
add_executable(Example_3-8 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/8. const를 사용한 변수.c")
add_executable(Problem_3-1-2 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Problem/Problem_3-1-2.c")
add_executable(Problem_3-1-3 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Problem/Problem_3-1-3.c")
add_executable(Example_3-9 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/9. scanf 함수를 사용한 키보드 입력.c")
add_executable(Example_3-10 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/10. scanf 함수를 사용한 연속 입력.c")
add_executable(Example_3-11 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Example/11. 문자와 문자열 입력.c")
add_executable(Problem_3-2-2 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Problem/Problem_3-2-2.c")
add_executable(Problem_3-2-3 "혼자 공부하는 C언어/Beginner/Chapter 3 변수와 데이터 입력/Problem/Problem_3-2-3.c")
add_executable(Example_4-1 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/1. 대입, 덧셈, 뺄셈, 곱셈, 음수 연산.c")
add_executable(Example_4-2 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/2. 몫과 나머지를 구하는 연산.c")
add_executable(Example_4-3 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/3. 증감 연산자의 연산.c")
add_executable(Example_4-4 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/4. 전위 표기와 후위 표기를 사용한 증감 연산.c")
add_executable(Example_4-5 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/5. 관계 연산의 결괏값 확인.c")
add_executable(Example_4-6 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/6. 논리 연산의 결괏값 확인.c")
add_executable(Example_4-7 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/7. 연산의 결괏값을 사용하는 방법.c")
add_executable(Problem_4-1-1 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Problem_4-1-1.c")
add_executable(Problem_4-1-2 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Problem_4-1-2.c")
add_executable(Problem_4-1-3 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Problem_4-1-3.c")
add_executable(Example_4-8 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/8. 형 변환 연산자가 필요한 경우.c")
add_executable(Example_4-9 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/9. sizeof 연산자의 사용 예.c")
add_executable(Example_4-10 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/10. 복합대입 연산자.c")
add_executable(Example_4-11 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/11. 콤마 연산자.c")
add_executable(Example_4-12 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/12. 조건 연산자.c")
add_executable(Example_4-13 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/13. 비트 연산식의 결과.c")
add_executable(Example_4-14 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Example/14. 연산자 우선순위와 연산 방향.c")
add_executable(Problem_4-2-1 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Problem_4-2-1.c")
add_executable(Problem_4-2-2 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Problem_4-2-2.c")
add_executable(Problem_4-2-3 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Problem_4-2-3.c")
add_executable(Challenge_4 "혼자 공부하는 C언어/Beginner/Chapter 4 연산자/Problem/Challenge_4_체중관리 프로그램.c")
add_executable(Example_5-1 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/1. if문의 기본 형식.c")
add_executable(Example_5-2 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/2. if ~ else문의 사용.c")
add_executable(Example_5-3 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/3. if ~ else if ~ else문 사용.c")
add_executable(Problem_5-1-1-1 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Problem_5-1-1-1.c")
add_executable(Problem_5-1-1-2 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Problem_5-1-1-2.c")
add_executable(Problem_5-1-2 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Problem_5-1-2.c")
add_executable(Problem_5-1-3 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Problem_5-1-3.c")
add_executable(Example_5-4 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/4. 중첩된 if문.c")
add_executable(Example_5-5 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/5. 중첩 if문에서 중괄호가 반드시 필요한 경우.c")
add_executable(Example_5-6 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Example/6. switch ~ case문의 사용.c")
add_executable(Problem_5-2-2 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Problem_5-2-2.c")
add_executable(Problem_5-2-3 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Problem_5-2-3.c")
add_executable(Challenge_5 "혼자 공부하는 C언어/Beginner/Chapter 5 선택문/Problem/Challenge_5_계산기 프로그램.c")
add_executable(Example_6-1 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Example/1. while문을 사용한 반복문.c")
add_executable(Example_6-2 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Example/2. for문을 사용한 반복문.c")
add_executable(Example_6-3 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Example/3. do ~ while문을 사용한 반복문.c")
add_executable(Example_6-4 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Example/4. 중첩 반복문을 사용한 별 출력.c")
add_executable(Example_6-5 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Example/5. break를 사용한 반복문 종료.c")
add_executable(Problem_6-1-1 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/Problem_6-1-1.c")
add_executable(Problem_6-1-2 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/Problem_6-1-2.c")
add_executable(Problem_6-2-1 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/Problem_6-2-1.c")
add_executable(Problem_6-2-2 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/Problem_6-2-2.c")
add_executable(Problem_6-2-3 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/Problem_6-2-3.c")
add_executable(Challenge_6 "혼자 공부하는 C언어/Beginner/Chapter 6 반복문/Problem/Challenge_6_소수(prime number) 출력 프로그램.c")
add_executable(Example_7-1 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/1. 2개의 함수로 만든 프로그램.c")
add_executable(Problem_7-1-1 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Problem/Problem_7-1-1.c")
add_executable(Problem_7-1-3 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Problem/Problem_7-1-3.c")
add_executable(Example_7-2 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/2. 매개변수가 없는 함수.c")
add_executable(Example_7-3 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/3. 반환값이 없는 함수.c")
add_executable(Example_7-4 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/4. 반환값과 매개변수가 모두 없는 함수.c")
add_executable(Example_7-5 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/5. 재귀호출 함수.c")
add_executable(Example_7-6 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/6. 3번 실행되는 재귀호출 함수.c")
add_executable(Example_7-7 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Example/7. 3번 실행되는 재귀호출 함수 2.c")
add_executable(Problem_7-2-2 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Problem/Problem_7-2-2.c")
add_executable(Problem_7-2-3 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Problem/Problem_7-2-3.c")
add_executable(Challenge_7 "혼자 공부하는 C언어/Beginner/Chapter 7 함수/Problem/Challenge_7_1부터 10까지의 합 계산(재귀호출 사용).c")
add_executable(Example_8-1 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/1. 5명의 나이를 저장할 배열을 선언하고 사용하는 방법.c")
add_executable(Example_8-2 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/2. 배열과 반복문을 사용한 성적 처리 프로그램.c")
add_executable(Example_8-3 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/3. sizeof 연산자를 사용한 배열.c")
add_executable(Problem_8-1-3 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Problem/Problem_8-1-3.c")
add_executable(Example_8-4 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/4. 문자열을 저장하는 char형 배열.c")
add_executable(Example_8-5 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/5. 문자열을 대입하는 strcpy 함수.c")
add_executable(Example_8-6 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Example/6. 빈칸을 포함한 문자열 입력.c")
add_executable(Problem_8-2-3 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Problem/Problem_8-2-3.c")
add_executable(Challenge_8 "혼자 공부하는 C언어/Beginner/Chapter 8 배열/Problem/Challenge_8_대소문자 변환 프로그램.c")
add_executable(Example_9-1 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/1. 변수의 메모리 주소 확인.c")
add_executable(Example_9-2 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/2. 포인터의 선언과 사용.c")
add_executable(Example_9-3 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/3. 포인터를 사용한 두 정수의 합과 평균 계산.c")
add_executable(Example_9-4 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/4. 포인터에 const 사용.c")
add_executable(Problem_9-1-3 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Problem/Problem_9-1-3.c")
add_executable(Example_9-5 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/5. 주소와 포인터의 크기.c")
add_executable(Example_9-6 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/6. 허용되지 않는 포인터의 대입.c")
add_executable(Example_9-7 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/7. 포인터를 사용한 두 변수의 값 교환.c")
add_executable(Example_9-8 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/8. 다른 함수의 변수 사용하기.c")
add_executable(Example_9-9 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Example/9. 변수의 값을 인수로 주는 경우.c")
add_executable(Problem_9-2-3 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Problem/Problem_9-2-3.c")
add_executable(Challenge_9 "혼자 공부하는 C언어/Beginner/Chapter 9 포인터/Problem/Challenge_9_미니 정렬 프로그램.c")
add_executable(Example_10-1 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/1. 배열명에 정수 연산을 수행하여 배열 요소 사용.c")
add_executable(Example_10-2 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/2. 배열명처럼 사용되는 포인터.c")
add_executable(Example_10-3 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/3. 포인터를 이용한 배열의 값 출력.c")
add_executable(Example_10-4 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/4. 포인터의 뺄셈과 관계 연산.c")
add_executable(Problem_10-1-1 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Problem/Problem_10-1-1.c")
add_executable(Problem_10-1-3 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Problem/Problem_10-1-3.c")
add_executable(Example_10-5 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/5. 배열을 처리하는 함수.c")
add_executable(Example_10-6 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/6. 크기가 다른 배열을 출력하는 함수.c")
add_executable(Example_10-7 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Example/7. 배열에 값을 입력하는 함수.c")
add_executable(Problem_10-2-2 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Problem/Problem_10-2-2.c")
add_executable(Challenge_10 "혼자 공부하는 C언어/Intermediate/Chapter 10 배열과 포인터/Problem/Challenge_10_로또 번호 생성 프로그램.c")
add_executable(Example_11-1 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/1. 대문자를 소문자로 변경.c")
add_executable(Example_11-2 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/2. 공백이나 제어 문자의 입력.c")
add_executable(Example_11-3 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/3. getchar 함수와 putchar 함수 사용.c")
add_executable(Problem_11-1-2 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Problem/Problem_11-1-2.c")
add_executable(Example_11-4 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/4. 버퍼를 사용하는 문자 입력.c")
add_executable(Example_11-5 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/5. 입력 문자와 아스키 코드 값을 출력하는 프로그램.c")
add_executable(Example_11-6 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/6. getchar 함수를 사용한 문자열 입력.c")
add_executable(Example_11-7 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Example/7. 버퍼의 내용을 지워야하는 경우.c")
add_executable(Problem_11-2-3 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Problem/Problem_11-2-3.c")
add_executable(Challenge_11 "혼자 공부하는 C언어/Intermediate/Chapter 11 문자/Problem/Challenge_11_길이가 가장 긴 단어 찾기.c")
add_executable(Example_12-1 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/1. 문자열 상수가 주소란 증거.c")
add_executable(Example_12-2 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/2. 포인터로 문자열을 사용하는 방법.c")
add_executable(Example_12-3 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/3. scanf 함수를 사용한 문자열 입력.c")
add_executable(Example_12-4 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/4. gets 함수에 한 줄의 문자열 입력.c")
add_executable(Example_12-5 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/5. fgets 함수의 문자열 입력 방법.c")
add_executable(Example_12-6 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/6. 개행 문자로 인해 gets 함수가 입력을 못하는 경우.c")
add_executable(Example_12-7 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/7. 문자열을 출력하는 puts와 fputs 함수.c")
add_executable(Problem_12-1-1 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Problem/Problem_12-1-1.c")
add_executable(Problem_12-1-2 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Problem/Problem_12-1-2.c")
add_executable(Problem_12-1-3 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Problem/Problem_12-1-3.c")
add_executable(Example_12-8 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/8. strcpy 함수의 사용법.c")
add_executable(Example_12-9 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/9. strncpy 함수를 사용한 문자열 복사.c")
add_executable(Example_12-10 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/10. strcat, strncat 함수를 사용한 문자열 붙이기.c")
add_executable(Example_12-11 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/11. 두 문자열 중 길이가 긴 단어 출력.c")
add_executable(Example_12-12 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/12. strcmp, strncmp 함수를 사용한 문자열 비교.c")
add_executable(Example_12-13 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Example/13. strcpy와 기능이 같은 함수의 구현.c")
add_executable(Problem_12-2-2 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Problem/Problem_12-2-2.c")
add_executable(Problem_12-2-3 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Problem/Problem_12-2-3.c")
add_executable(Challenge_12 "혼자 공부하는 C언어/Intermediate/Chapter 12 문자열/Problem/Challenge_12_단어 정렬 프로그램.c")
add_executable(Example_13-1 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/1. 두 함수에서 같은 이름의 지역 변수를 사용한 경우.c")
add_executable(Example_13-2 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/2. 블록 안에 지역 변수를 사용하여 두 변수를 교환하는 프로그램.c")
add_executable(Example_13-3 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/3. 전역 변수의 사용.c")
add_executable(Example_13-4 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/4. auto 지역 변수와 static 지역 변수의 비교.c")
add_executable(Example_13-5 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/5. 레지스터 변수를 반복문에 사용한 예.c")
add_executable(Problem_13-1-2 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Problem/Problem_13-1-2.c")
add_executable(Problem_13-1-3 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Problem/Problem_13-1-3.c")
add_executable(Example_13-6 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/6. 10을 더하기 위해 값을 인수로 주는 경우.c")
add_executable(Example_13-7 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/7. 포인터를 써서 변수의 값에 10을 더하는 경우.c")
add_executable(Example_13-8 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Example/8. 주소를 반환하여 두 정수의 합 계산.c")
add_executable(Problem_13-2-3 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Problem/Problem_13-2-3.c")
add_executable(Challenge_13 "혼자 공부하는 C언어/Intermediate/Chapter 13 변수의 영역과 데이터 공유/Problem/Challenge_13_전역 변수 교환 프로그램.c")
add_executable(Example_14-1 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/1. 학생 3명의 네 과목 총점과 평균을 구하는 프로그램.c")
add_executable(Example_14-2 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/2. 2차원 배열의 다양한 초기화 방법.c")
add_executable(Example_14-3 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/3. 여러 개의 동물 이름을 입출력하는 프로그램.c")
add_executable(Example_14-4 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/4. 2차원 char 배열에 동물 이름을 초기화하는 방법.c")
add_executable(Example_14-5 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/5. 2개 반 3명의 학생의 4과목 점수를 저장하는 3차원 배열.c")
add_executable(Problem_14-1-3-1 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Problem/Problem_14-1-3-1.c")
add_executable(Problem_14-1-3-2 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Problem/Problem_14-1-3-2.c")
add_executable(Example_14-6 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/6. 포인터 배열로 여러 개의 문자열 출력.c")
add_executable(Example_14-7 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Example/7. 여러 개의 1차원 배열을 2차원 배열처럼 사용.c")
add_executable(Problem_14-2-2 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Problem/Problem_14-2-2.c")
add_executable(Challenge_14 "혼자 공부하는 C언어/Intermediate/Chapter 14 다차원 배열과 포인터 배열/Problem/Challenge_14_가로 세로의 합 구하기.c")
add_executable(Example_15-1 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/1. 포인터와 이중 포인터의 관계.c")
add_executable(Example_15-2 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/2. 이중 포인터를 사용한 포인터 교환.c")
add_executable(Example_15-3 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/3. 포인터 배열의 값을 출력하는 함수.c")
add_executable(Example_15-4 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/4. 주소로 쓰이는 배열명과 배열의 주소 비교.c")
add_executable(Example_15-5 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/5. 배열 포인터로 2차원 배열의 값 출력.c")
add_executable(Example_15-6 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/6. 2차원 배열의 값을 출력하는 함수.c")
add_executable(Problem_15-1-1 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Problem/Problem_15-1-1.c")
add_executable(Problem_15-1-2 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Problem/Problem_15-1-2.c")
add_executable(Example_15-7 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/7. 함수 포인터를 사용한 함수 호출.c")
add_executable(Example_15-8 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/8. 함수 포인터로 원하는 함수를 호출하는 프로그램.c")
add_executable(Example_15-9 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Example/9. void 포인터의 사용.c")
add_executable(Problem_15-2-2 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Problem/Problem_15-2-2.c")
add_executable(Problem_15-2-3 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Problem/Problem_15-2-3.c")
add_executable(Challenge_16 "혼자 공부하는 C언어/Intermediate/Chapter 15 응용 포인터/Problem/Challenge_16_프로필 교환 프로그램.c")